(lang dune 3.6)

(name forchen)

(generate_opam_files true)

(source
 (github Psi-Prod/forchen))

(authors "heyplzlook@me rly cute members")

(maintainers "lelolartichaut@laposte.net")

(license GPL-3.0)

(package
 (name forchen)
 (synopsis "now available 2 ocaml Shitp4sterS")
 (description ":fortune: :^)")
 (depends ocaml dune (mirage-random (>= 3.0.0))))
